--- a/src/css/style.css
+++ b/src/css/style.css
@@ -185,6 +185,24 @@ tr.dark-mode:nth-child(even) {
     background-color: var(--sky-blue-1-hover);
 }
 
+.icon-title-h2-1 {
+    transform: translate(3px, 5px);
+    font-size: 28px!important;
+}
+
+p {
+    line-height: 1.5rem;
+}
+
+.text-input-dark-1.dark-mode {
+    background-color: rgba(120,120,120)!important;
+    color: white;
+}
+
+.text-input-dark-1.dark-mode::placeholder {
+    color: rgb(202, 202, 202)!important
+}
+
 .logo-vertical {
     color: white;
     font-size: 22px;
@@ -521,6 +539,18 @@ textarea {
     margin: 5px 0 10px;
 }
 
+.panel-error {
+    background-color: #fdb3b3;
+    padding: 15px;
+    border: 1px solid #d63031;
+    border-radius: 5px;
+}
+
+.panel-error.dark-mode {
+    background-color: #7d2020;
+    color: white;
+}
+
 .button-main-cty {
     background-color: transparent;
     border: 1px solid var(--color-main);
@@ -531,6 +561,28 @@ textarea {
     background-color: rgb(41, 41, 41);
     border-width: 2px;
     font-weight: bold;
+}
+
+.done-button {
+    background-color: transparent;
+    border: 1px solid gray;
+    color: gray;
+}
+
+.done-button.dark-mode {
+    border: 1px solid rgb(209, 209, 209);
+    color: rgb(209, 209, 209);
+}
+
+.done-button.dark-mode:hover {
+    border: 1px solid rgb(182, 182, 182);
+    color: rgb(182, 182, 182);
+}
+
+
+.done-button:hover {
+    border: 1px solid rgb(151, 151, 151);
+    color: rgb(151, 151, 151);
 }
 
 @media screen and (max-width: 1320px) {
