--- a/src/css/vertical-main-menu.css
+++ b/src/css/vertical-main-menu.css
@@ -135,6 +135,33 @@
     display: none;
 }
 
+.circle-notification {
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 12px;
+    background-color: var(--red-1);
+    height: 18px;
+}
+
+.circle-notification-1 {
+    width: 18px;
+    border-radius: 50%;
+    transform: translate(6px,-2px);
+}
+
+.circle-notification-2 {
+    transform: translate(9px,-2px);
+    width: 26px;
+    border-radius: 33px;
+}
+
+.circle-notification-3 {
+    transform: translate(12px,-2px);
+    width: 34px;
+    border-radius: 33px;
+}
+
 @media screen and (max-height: 750px) {
     .lower-options {
         bottom: unset;
