Edit grade finished

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -540,7 +540,7 @@ textarea {
 }
 
 .panel-error {
-    background-color: #fdb3b3;
+    background-color: #ffc8c8;
     padding: 15px;
     border: 1px solid #d63031;
     border-radius: 5px;
