--- a/src/css/vertical-main-menu.css
+++ b/src/css/vertical-main-menu.css
@@ -162,6 +162,31 @@
     border-radius: 33px;
 }
 
+.vertical-menu-2 {
+    border-radius: 5px;
+    border: var(--beauty-border);
+    width: fit-content;
+    overflow: hidden;
+}
+
+.vertical-options-2 {
+    display: block;
+    padding: 15px 20px;
+    color: black;
+    text-decoration: none;
+    transition: .2s ease all;
+    float: left;
+}
+
+.vertical-options-2:hover{
+    background-color: rgb(236, 236, 236);
+}
+
+.vertical-options-2.active {
+    color: white;
+    background-color: #0f906f;
+}
+
 @media screen and (max-height: 750px) {
     .lower-options {
         bottom: unset;
