--- a/src/css/vertical-main-menu.css
+++ b/src/css/vertical-main-menu.css
@@ -9,14 +9,14 @@
     bottom: 0;
     left: 0;
     width: 245px;
-    z-index: 1;
+    z-index: 3;
     background: rgb(18, 159, 123);
     background: linear-gradient(180deg, rgba(18, 159, 123, 1) 0%, rgba(10, 109, 85, 1) 100%);
     box-shadow: 6px 0px 25px rgba(0,0,0,0.1);
 }
 
 .vertical-main-menu-f.dark-mode {
-    background: var(--dark-mode-bg-1);
+    background: rgb(58 58 58);
 }
 
 .v-o-fa {
@@ -44,7 +44,7 @@
 }
 
 .vertical-options.dark-mode:hover, .vertical-options.active.dark-mode {
-    background-color: black ;
+    background-color: #161616 ;
 }
 
 .options-vertical{
@@ -182,6 +182,10 @@
     background-color: rgb(236, 236, 236);
 }
 
+.vertical-options-2.dark-mode:hover{
+    background-color: rgb(65, 65, 65);
+}
+
 .vertical-options-2.active {
     color: white;
     background-color: #0f906f;
@@ -236,6 +240,9 @@
         display: none;
     }
 
+    .logo {
+        transform: translateY(3.5%);
+    }
 }
 
 @media screen and (max-width: 380px) {
