--- a/src/css/style.css
+++ b/src/css/style.css
@@ -357,10 +357,16 @@ p {
     background-color: transparent;
 }
 
+
+
 .box-cont-1 {
     border: var(--beauty-border);
     overflow: hidden;
     border-radius: 5px;
+}
+
+.search-container {
+    padding-bottom: 60px;
 }
 
 .cont-profile {
@@ -382,6 +388,10 @@ p {
 
 .view-more:hover {
     color: rgb(141, 141, 141)
+}
+
+.view-more.dark-mode:hover {
+    color: rgb(218, 218, 218)
 }
 
 .select-image-cr-cu {
@@ -723,6 +733,13 @@ textarea {
     width: 100%;
     object-fit: cover;
     height: 200px;
+}
+
+.search-button-div {
+    position: absolute;
+    bottom: 20px;
+    left: 0;
+    right: 0;
 }
 
 @media screen and (max-width: 1320px) {
